--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#intro">How we met</a></li>
-                                <li><a href="#events">Events</a></li>
-                                <li><a href="#instagram">Instagram</a></li>
-                                <li><a href="#eng-pics">Engagement</a></li>
-                                <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                                <li><a href="#brautpaar">Brautpaar </a></li>
+                                <li><a href="#ablauf">Ablauf</a></li>
+                                <li><a href="#location">Location</a></li>
+                                <li><a href="#trauzeugen">Trauzeugen</a></li>
+                                <li><a href="#f_a">Fragen + Antworten</a></li>
                             </ul>
                             <ul class="member-actions">
-                                <li><a href="#map" class="login">Venue</a></li>
-                                <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
+                                <li><a href="#rsvp" class="btn-white btn-small">um Antwort wird gebeten</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -108,7 +107,7 @@
             <div class="row">
                 <div class="col-sm-4 hidden-xs"></div>
                 <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                        class="btn btn-accent btn-large rsvp-btn">RSVP</a></div>
+                        class="btn btn-accent btn-large rsvp-btn">um Antwort wird gebeten</a></div>
                 <div class="col-sm-4 hidden-xs"></div>
             </div>
         </div>
@@ -119,17 +118,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3>We are getting hitched</h3>
-                    <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a
-                        part of
-                        it.</p>
-                    <div class="share-bar"></div>
+                    <!-- TODO  Hier kurz was über Hochzeit schreiben -->
+                    <h3></h3>
+                    <p></p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="intro">
+    <section id="brautpaar">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -163,11 +160,11 @@
         </div>
     </section>
 
-    <section class="events section-padding" id="events">
+    <section class="events section-padding" id="ablauf">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="header">Events</h3>
+                    <h3 class="header">Ablauf</h3>
                 </div>
             </div>
             <div class="row">
@@ -279,7 +276,7 @@
 
     </section>
 
-    <section id="instagram" class="section-padding">
+    <section id="location" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -297,7 +294,7 @@
         </div>
     </section>
 
-    <section id="eng-pics" class="section-padding">
+    <section id="trauzeugen" class="section-padding">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 text-center">
