--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                         <nav>
                             <ul class="primary-nav">
                                 <li><a href="#brautpaar">Brautpaar </a></li>
+                                <li><a href="#trauzeugen">Trauzeugen</a></li>
                                 <li><a href="#ablauf">Ablauf</a></li>
                                 <li><a href="#location">Location</a></li>
-                                <li><a href="#trauzeugen">Trauzeugen</a></li>
                                 <li><a href="#f_a">Fragen + Antworten</a></li>
                             </ul>
                             <ul class="member-actions">
@@ -106,8 +106,8 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 hidden-xs"></div>
-                <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                        class="btn btn-accent btn-large rsvp-btn">um Antwort wird gebeten</a></div>
+                <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">um
+                        Antwort wird gebeten</a></div>
                 <div class="col-sm-4 hidden-xs"></div>
             </div>
         </div>
@@ -118,46 +118,71 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <!-- TODO  Hier kurz was über Hochzeit schreiben -->
-                    <h3></h3>
-                    <p></p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="brautpaar">
+
+        <div class="container" style="display: grid; justify-content: cen;">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h3 class="header">Das Brautpaar</h3>
+                </div>
+            </div>
+            <div class="row" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+                <div class=""><img src="img/elli.jpeg" height="250px" class="wp8"></div>
+                <div style="width: 100px;"></div>
+                <div class=""><img src="img/jonas.jpeg" height="250px" class="wp9"></div>
+            </div>
+            <div class="row">
+                <div>
+                    <p style="text-align: center; margin-top: 10px;">
+                        Was uns bis heute ausmacht und unsere Beziehung trägt: Ehrlichkeit, liebevoller und
+                        rücksichtsvoller Umgang miteinander, lange Gespräche und viel lachen.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <div style="display: flex; justify-content: center;">
+            <img src="img/blumen.jpeg" height="250px" class="wp9">
+        </div>
+
+    </section>
+
+    <section id="trauzeugen">
+
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3 class="header">How we met</h3>
+                    <h3 class="header">Die Trauzeugen</h3>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
-                <div class="col-md-6">
-                    <p>
-                        I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted
-                        to
-                        her but was far too nervous to speak to her. I had told my friend I liked her and news had
-                        traveled
-                        fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me
-                        in
-                        the class. She started to take notice of me and no matter how boring the lecture was, we never
-                        missed a class after that. After a good few months I finally plucked up the courage to ask her
-                        out
-                        and the rest is history :)
-                    </p>
+            <div class="row" style="display: flex; flex-wrap: wrap; justify-content: space-between center;">
+                <div style="display: grid;">
+                    <p style="text-align: center;"> <strong> Natallia</strong></p>
+                    <img src="img/natallia.jpg" height="250px" class="wp8">
+                    <p style="text-align: center;">
+                        Telefon: +49 170 8756706 <br>
+                        E-Mail:krampflnatallia@gmail.com</p>
                 </div>
-                <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg"
-                        class="wp8"></div>
-                <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg"
-                        class="wp9"></div>
-            </div>
+                <div style="width: 100px;"></div>
+
+                <div style="display: grid;">
+                    <p style="text-align: center;"> <strong> Maj Britt </strong></p>
+                    <img src="img/majbritt.jpg" height="250px" class="wp9">
+                    <p style="text-align: center;">
+                        Telefon: +49 175 4108139 <br>
+                        E-Mail:majbritt_beier@yahoo.de</p>
+                </div>
+        
         </div>
+        <div style="display: flex; justify-content: center;">
+            <img src="img/blumen.jpeg" height="250px" class="wp9">
+        </div>
+
     </section>
 
     <section class="events section-padding" id="ablauf">
@@ -276,7 +301,7 @@
 
     </section>
 
-    <section id="location" class="section-padding">
+    <section id="instagram" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -294,7 +319,7 @@
         </div>
     </section>
 
-    <section id="trauzeugen" class="section-padding">
+    <section id="eng-pics" class="section-padding">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 text-center">
