--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 du dorthin:
             </p>
             <div
-                style="display: flex; justify-content: center; max-width: 750px; max-height: 750px; min-width: 450px; min-height: 450px; ">
+                style="display: flex; justify-content: center; max-width: 750px; max-height: 750px; min-height: 450px; ">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5232.49253671391!2d12.824282!3d49.02492300000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4775410c9dfad037%3A0x46c0cd927582ad8!2sBerggasthaus%20Hochpr%C3%B6ller!5e0!3m2!1sde!2sde!4v1698224635574!5m2!1sde!2sde"
                     style="border:0; width: 100%; height: 100%; border: 2px solid black;" allowfullscreen=""
@@ -322,7 +322,7 @@
     </section>
     <section class="faq_jonas" id="f_a">
         <div id="faq-container" style="display: grid; justify-content: center; ">
-            <div id="fragen-antworten-content-container" style="max-width: 900px" class="mx-auto">
+            <div id="fragen-antworten-content-container" style="max-width: 600px" class="mx-auto">
 
                 <div class="row text-center mx-auto">
                     <div class="col-12">
@@ -473,8 +473,7 @@
                             <div class="col-md-12" id="alert-wrapper"></div>
                         </div>
                         <button class="btn-fill rsvp-btn">
-                            Yes,
-                            that's me!
+                            Ich nehme teil!
                         </button>
                     </form>
                 </div>
