--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <div id="collapse-1" class="collapse" aria-labelledby="heading-1" data-parent="#accordion"
                             style="">
                             <div class="card-body accordion-body">
-                                <p class="answer">Wir treffen uns am
+                                <p class="answer" style="overflow-wrap: break-word;">Wir treffen uns am
                                     Der Gasthof verfügt über einige Einzel-, Doppel- und Mehrbettzimmer, die direkt über
                                     die Webseite des Gasthofes zu buchen sind. Für die Nachtschwärmer ist die
                                     angrenzende Partyhütte mit Bettenlager gebucht.</p>
