--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
                 Unsere Freie Trauung und auch das anschließende Fest finden im Berggasthof Hochpröller statt. So kommst
                 du dorthin:
             </p>
-            <div
-                style="display: flex; justify-content: center; max-width: 750px; max-height: 750px; min-height: 450px; ">
+            <div class="maps-gg">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5232.49253671391!2d12.824282!3d49.02492300000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4775410c9dfad037%3A0x46c0cd927582ad8!2sBerggasthaus%20Hochpr%C3%B6ller!5e0!3m2!1sde!2sde!4v1698224635574!5m2!1sde!2sde"
                     style="border:0; width: 100%; height: 100%; border: 2px solid black;" allowfullscreen=""
                     loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
+        </div>
         </div>
         <div style="display: flex; justify-content: center;">
             <img src="img/blumen.jpeg" height="250px" class="wp9">
