--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="icon" type="image/png" sizes="64x64" href="img/logo-schrift-fav.png">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="stylesheet" href="cookieconsent.css">
 
 
     <script>
@@ -209,7 +210,7 @@
             <div class="maps-gg">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5232.49253671391!2d12.824282!3d49.02492300000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4775410c9dfad037%3A0x46c0cd927582ad8!2sBerggasthaus%20Hochpr%C3%B6ller!5e0!3m2!1sde!2sde!4v1698224635574!5m2!1sde!2sde"
-                    style="border:0; width: 100%; height: 100%; border: 2px solid black;" allowfullscreen=""
+                    style="border:0; width: 100%; height:500px;  border: 2px solid black;" allowfullscreen=""
                     loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
@@ -499,9 +500,11 @@
     <script src="js/jquery.mb.YTPlayer.min.js"></script>
     <script src="js/vendor/ouical.js"></script>
     <script src="js/scripts.min.js"></script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
+    <script defer src="cookieconsent.js"></script>
+    <script defer src="cookieconsent-init.js"></script>
 
+    
+    
 </body>
 
 </html>
